# covisible

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/covisible/: __init__.py  cli.py
src/covisible/analysis/: __init__.py  blame.py  diff.py  grouping.py  history.py  pr_coverage.py  treemap.py
src/covisible/assets/css/: style.css
src/covisible/assets/js/: app.js
src/covisible/core/: __init__.py  ignore.py  models.py  pathmap.py
src/covisible/parsers/: __init__.py  gcov_json.py  lcov.py
src/covisible/report/: __init__.py  badge.py  cobertura.py  generator.py  markdown.py
src/covisible/report/templates/: base.html  directory.html  file.html  index.html
src/covisible/report/templates/components/: authors.html  sunburst.html  treemap.html  trend.html
src/covisible/utils/: __init__.py  demangle.py
tests/: __init__.py  test_badge.py  test_blame.py  test_cli.py  test_cobertura.py  test_demangle.py  test_diff.py  test_gcov_json.py  test_grouping.py  test_ignore.py  test_merge.py  test_parsers.py  test_pathmap.py  test_pr_coverage.py  test_report_links.py  test_source_resolution.py  test_treemap.py
