[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "covisible"
version = "0.1.0"
description = "PR-first code coverage report generator with modern UI"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "LaGrunge", email = "leontodys@gmail.com" }
]
keywords = ["coverage", "gcov", "testing", "code-quality", "diff"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
covisible = "covisible.cli:main"

[project.urls]
Homepage = "https://github.com/LaGrunge/covisible"
Repository = "https://github.com/LaGrunge/covisible"

[tool.hatch.build.targets.wheel]
packages = ["src/covisible"]

[tool.hatch.build.targets.sdist]
include = [
    "src/covisible",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
